# gradle

./: .bzrignore  .cod1  .coderabbit.yaml  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitmodules  .lgtm.yml  .mailmap  .mrconfig  .pre-commit-config.yaml  .reloc  .sdkmanrc  .swm  .swn  .tm_properties  .travis.yml  AGENTS.md  AI_POLICY.md  Bg  CHATQUANTUM-Alphabet  CLA.md  CLAUDE.md  CONTRIBUTING.md  Development.md  HASH-PERSISTENT-CACHE.md  Html.e  IMPROVEMENTS.md  JavadocStyleGuide.md  KEYS.md  LICENSE  MEGAUNIVERSE  MIGRATION.md  NOTES.md  Organization identity  PARALLEL-RESOLUTION.md  PLAN-2.md  PLAN-TWO-PHASE.md  PLAN.md  (+67 more)
.claude/: settings.json
.cm/: Letra  add_usual_expert.cm  change_categories.cm  code_experts.cm  complex_changes.cm  estimated_time_to_review.cm  includes_todos.cm  javadoc_on_new_files.cm  lacks_tests.cm  misc_labels.cm  percentage_new.cm  platform_labels.cm  summary_table.cm  summary_table_owners.cm  summary_table_platforms.cm
.devcontainer/: devcontainer.json
.fleet/: receipt.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LABELOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  auto_assign.yml  codeql-config.yml  dco.xtml  dco.yml  dependabot.yml  mergify.yml  package.json  stale.yml
.local-dist/: .gitattributes
.teamcity/: README.md  jdk11.nix  jdks.yaml  mvnw  performance-test-durations.json  performance-test-runtimes.csv  performance-test-runtimes.json  performance-tests-ci.json  pom.xml  settings.kts  subprojects.json  test-buckets.json
Project-level build.gradle (<project>/: build.gradle):
antlr/: build.gradle
api-metadata/: build.gradle.kts
app/: build.gradle
architecture/: README.md  build-execution-model.md  build-state-model.md  index.html  platforms.md  runtimes.md
architecture-standards/: 0001-use-architectural-decision-records.md  0002-avoid-java-serialization.md  0002-avoid-using-java-serialization.md  0003-avoid-introducing-Groovy-types-to-public-api.md  0004-use-a-platform-architecture.md  0005-introduce-core-ui-architecture-module.md  README.md
assets/: README.md
backwards-compatibility-for-idea/: build.gradle.kts
bin_64/: gpgex.dll.tmp  libgpgmepp-6.dll.tmp
build-action/: build.gradle.kts
build-cache/: build.gradle.kts
build-cache-base/: build.gradle.kts
build-logic/: build.gradle.kts  (+3 more)
build-logic-commons/: build.gradle.dcl  build.gradle.kts  gradle.properties  settings.gradle.kts
build-logic-settings/: README.md  UpdateDevelocityPluginVersion.java  build.gradle.dcl  build.gradle.kts  gradle.properties  settings.gradle.kts  update-develocity-plugin-version.sh
build-logic-shared/: build.gradle.kts  settings.gradle.kts
build-logic-software-types/: build.gradle.kts  settings.gradle.kts
ext-perfetto/src/main/proto/perfetto/config/: BUILD.gn  data_source_config.proto  interceptor_config.proto  stress_test_config.proto  trace_config.proto
ext-perfetto/src/main/proto/perfetto/config/android/: BUILD.gn  android_game_intervention_list_config.proto  android_log_config.proto  android_polled_state_config.proto  android_system_property_config.proto  network_trace_config.proto
ext-perfetto/src/main/proto/perfetto/config/chrome/: chrome_config.proto
ext-perfetto/src/main/proto/perfetto/config/ftrace/: ftrace_config.proto
ext-perfetto/src/main/proto/perfetto/config/interceptors/: BUILD.gn  console_config.proto
ext-perfetto/src/main/proto/perfetto/config/power/: android_power_config.proto
ext-perfetto/src/main/proto/perfetto/config/process_stats/: process_stats_config.proto
ext-perfetto/src/main/proto/perfetto/config/profiling/: BUILD.gn  heapprofd_config.proto  java_hprof_config.proto  perf_event_config.proto
ext-perfetto/src/main/proto/perfetto/config/statsd/: BUILD.gn  atom_ids.proto  statsd_tracing_config.proto
ext-perfetto/src/main/proto/perfetto/config/sys_stats/: sys_stats_config.proto
ext-perfetto/src/main/proto/perfetto/config/system_info/: BUILD.gn  system_info.proto
ext-perfetto/src/main/proto/perfetto/config/track_event/: track_event_config.proto
ext-perfetto/src/main/proto/perfetto/metrics/: BUILD.gn  custom_options.proto  metrics.proto
ext-perfetto/src/main/proto/perfetto/metrics/android/: BUILD.gn  android_frame_timeline_metric.proto  android_trusty_workqueues.proto  batt_metric.proto  binder_metric.proto  camera_metric.proto  camera_unagg_metric.proto  display_metrics.proto  dma_heap_metric.proto  dvfs_metric.proto  fastrpc_metric.proto  g2d_metric.proto  gpu_metric.proto  hwcomposer.proto  irq_runtime_metric.proto  jank_cuj_metric.proto  java_heap_histogram.proto  java_heap_stats.proto  lmk_reason_metric.proto  mem_metric.proto  multiuser_metric.proto  network_metric.proto  other_traces.proto  powrails_metric.proto  profiler_smaps.proto  rt_runtime_metric.proto  simpleperf.proto  startup_metric.proto  surfaceflinger.proto  thread_time_in_state_metric.proto  trace_quality.proto  unsymbolized_frames.proto
ext-perfetto/src/main/proto/perfetto/metrics/chrome/: BUILD.gn  all_chrome_metrics.proto  args_class_names.proto  blink_gc_metric.proto  dropped_frames.proto  frame_times.proto  histogram_hashes.proto  long_latency.proto  media_metric.proto  performance_mark_hashes.proto  reported_by_page.proto  scroll_jank.proto  slice_names.proto  test_chrome_metric.proto  touch_jank.proto  unsymbolized_args.proto  user_event_hashes.proto
ext-perfetto/src/main/proto/perfetto/trace/track_event/: BUILD.gn  chrome_active_processes.proto  chrome_application_state_info.proto  chrome_compositor_scheduler_state.proto  chrome_content_settings_event_info.proto  chrome_frame_reporter.proto  chrome_histogram_sample.proto  chrome_latency_info.proto  chrome_message_pump.proto  chrome_mojo_event_info.proto  chrome_process_descriptor.proto  chrome_renderer_scheduler_state.proto  chrome_thread_descriptor.proto  chrome_window_handle_event_info.proto  counter_descriptor.proto  debug_annotation.proto  log_message.proto  process_descriptor.proto  range_of_interest.proto  source_location.proto  task_execution.proto  track_descriptor.proto  track_event.proto
(+73874 files in other folders)
