# Copyright (C) 2019 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../gn/perfetto.gni")
import("../../../gn/proto_library.gni")

perfetto_proto_library("@TYPE@") {
  proto_generators = [
    "lite",
    "source_set",
  ]
  deps = [ "android:@TYPE@" ]
  sources = [ "metrics.proto" ]
}

perfetto_proto_library("custom_options_@TYPE@") {
  proto_generators = [ "source_set" ]
  sources = [ "custom_options.proto" ]
  import_dirs = [ "${perfetto_protobuf_src_dir}" ]
}

perfetto_proto_library("descriptor") {
  proto_generators = [ "descriptor" ]
  generate_descriptor = "metrics.descriptor"
  deps = [ ":source_set" ]
  sources = [ "metrics.proto" ]
}
